# 2024-tic-tac-toe-robot

./: .gitignore  README.md  minimax_simulation.py  需要启动的文件  项目介绍.md
STM32/1227 (2)/HARDWARE/ADC/: adc.c  adc.h
STM32/1227 (2)/HARDWARE/BEEP/: beep.c  beep.h
STM32/1227 (2)/HARDWARE/BLUETOOTH/: bluetooth.c  bluetooth.h
STM32/1227 (2)/HARDWARE/CONTROL/: control.c  control.h
STM32/1227 (2)/HARDWARE/HALL_SENSOR/: Hall_Sensor.c
STM32/1227 (2)/HARDWARE/HCSR04/: hc_sr04.h  hs_sr04.c
STM32/1227 (2)/HARDWARE/HUIDU_SENSOR/: HuiDu_Sensor.h
STM32/1227 (2)/HARDWARE/IIC/: myiic.c  myiic.h
STM32/1227 (2)/HARDWARE/INFRA/: Patrol_Pid.c  Patrol_Pid.h
STM32/1227 (2)/HARDWARE/INTER/: inter.c  inter.h
STM32/1227 (2)/HARDWARE/IWDG/: iwdg.c  iwdg.h
STM32/1227 (2)/HARDWARE/JY901/: JY901.h  jy901_u2.c  jy901_u2.h
STM32/1227 (2)/HARDWARE/K210/: k210.c  k210.h
STM32/1227 (2)/HARDWARE/KEY/: key.c  key.h
STM32/1227 (2)/HARDWARE/LED/: led.c  led.h
STM32/1227 (2)/HARDWARE/LY38/: Yl_Sensor.c  Yl_Sensor.h
STM32/1227 (2)/HARDWARE/MICRO/: micro.c  micro.h
STM32/1227 (2)/HARDWARE/MOTO/: Moto.c  Moto.h
STM32/1227 (2)/HARDWARE/MOTOR_ENCODER/: Motor_Encoder.c  Motor_Encoder.h
STM32/1227 (2)/HARDWARE/MOTOR_PID/: Motor_Pid.c  Motor_Pid.h
STM32/1227 (2)/HARDWARE/MOTOR_PID_TIME/: Motor_Pid_Time.c  Motor_Pid_Time.h
STM32/1227 (2)/HARDWARE/MPU6050/: mpu6050.c  mpu6050.h
STM32/1227 (2)/HARDWARE/MPU6050/eMPL/: dmpKey.h  dmpmap.h  inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c  inv_mpu_dmp_motion_driver.h
STM32/1227 (2)/HARDWARE/MPU6050_EXIT/: mpu6050_exit.c  mpu6050_exit.h
STM32/1227 (2)/HARDWARE/OLED/: bmp.h  oled.c  oled.h  oledfont.h
STM32/1227 (2)/HARDWARE/SERVO/: servo.c  servo.h
STM32/1227 (2)/HARDWARE/USART6/: usart6.c  usart6.h
STM32/1227 (2)/HARDWARE/XINHAO/: xinhao.c  xinhao.h
STM32/1227 (2)/SYSTEM/delay/: delay.c  delay.h
STM32/1227 (2)/SYSTEM/sys/: sys.c  sys.h
STM32/1227 (2)/SYSTEM/usart/: usart.c  usart.h
STM32/1227 (2)/USER/: Template.uvprojx  main.c  stm32f4xx.h  stm32f4xx_conf.h  stm32f4xx_it.c  stm32f4xx_it.h  system_stm32f4xx.c  system_stm32f4xx.h
STM32/1227 (2)/USER/a/: control_4.txt
sub_ws/src/plumbing_pubsub/: CMakeLists.txt  package.xml
sub_ws/src/plumbing_pubsub/src/: demo01_pub.cpp  demo02_pub.cpp
sub_ws/src/topic_example/: package.xml
sub_ws/src/topic_example/src/: mbot_linux_serial.cpp  mbot_linux_serial.h  publish_node.cpp
博弈算法-极大极小算法/tic-tac-toe-master.py/: game.py  player.py
博弈算法-极大极小算法/tic_tac_toe_ws/src/test_pkg/: CMakeLists.txt  package.xml
博弈算法-极大极小算法/tic_tac_toe_ws/src/test_pkg/scripts/: game.py
博弈算法-极大极小算法/tic_tac_toe_ws/src/test_pkg_t5/: CMakeLists.txt  package.xml
博弈算法-极大极小算法/tic_tac_toe_ws/src/test_pkg_t5/scripts/: game.py
博弈算法-极大极小算法/tic_tac_toe_ws/src/test_pkg_t6/: CMakeLists.txt  package.xml
博弈算法-极大极小算法/tic_tac_toe_ws/src/test_pkg_t6/scripts/: game.py  player.py
识别/: readme
识别/color_ws/src/color_dected/: CMakeLists.txt  package.xml
识别/color_ws/src/color_dected/launch/: usb_cam_with_calibration.launch  usb_cam_with_calibration1.launch
识别/color_ws/src/color_dected/scripts/: HSV_test.py  color_dected.py  color_dectednew.py  test.pptx
通信/: readme
通信/communication_ws01/src/serial_test/: CMakeLists.txt  package.xml
通信/communication_ws01/src/serial_test/src/: serial_test.cpp
通信/communication_ws01/src/sub_pub/: CMakeLists.txt  package.xml
通信/communication_ws01/src/sub_pub/msg/: pose.msg
通信/communication_ws01/src/sub_pub/scripts/: control_pub.py
通信/communication_ws01/src/sub_pub/src/: serial_stm32.cpp
通信/communication_ws01/src/topic_example/: CMakeLists.txt
通信/communication_ws01/src/topic_example/launch/: arm_basic.launch
通信/communication_ws01/src/topic_example/src/: mbot_linux_serial.cpp  mbot_linux_serial.h  publish_node.cpp
