cmake_minimum_required(VERSION 3.0.2)
project(plumbing_pubsub)







find_package(catkin REQUIRED COMPONENTS
  roscpp
  rospy
  std_msgs
)


























































































catkin_package(




)







include_directories(

  ${catkin_INCLUDE_DIRS}
)














add_executable(demo01_pub src/demo01_pub.cpp)
add_executable(demo02_pub src/demo02_pub.cpp)












target_link_libraries(demo01_pub
  ${catkin_LIBRARIES}
)
target_link_libraries(demo02_pub
  ${catkin_LIBRARIES}
)























































