cmake_minimum_required(VERSION 3.0.2)
project(test_pkg_t5)







find_package(catkin REQUIRED COMPONENTS
  cv_bridge
  image_transport
  roscpp
  rospy
  sensor_msgs
  std_msgs
)


























































































catkin_package(




)







include_directories(

  ${catkin_INCLUDE_DIRS}
)








































catkin_install_python(PROGRAMS
  scripts/game.py
  scripts/player.py
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)









































