cmake_minimum_required(VERSION 3.0.2)
project(serial_test)







find_package(catkin REQUIRED COMPONENTS
  roscpp
  rospy
  serial
  std_msgs
)


























































































catkin_package(




)







include_directories(

  ${catkin_INCLUDE_DIRS}
)





















































































add_executable(serial_test src/serial_test.cpp)
add_dependencies(serial_test ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
target_link_libraries(serial_test  ${catkin_LIBRARIES})
